--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,8 +29,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/signin"
-        android:id="@+id/signin"
+        android:text="@string/login"
+        android:id="@+id/login"
         android:layout_below="@+id/password"
         android:layout_centerHorizontal="true" />
 
