--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,41 +4,55 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/userName"
-            android:layout_height="wrap_content"
+        <ProgressBar
             android:layout_width="wrap_content"
-            android:ems="10"
-            android:hint="@string/user_name"
-            android:gravity="center"
-            android:layout_centerHorizontal="true">
-            <requestFocus />
-        </EditText>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/loading"
+            android:visibility="invisible"/>
 
-        <EditText
-            android:id="@+id/password"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:ems="10"
-            android:hint="@string/password"
-            android:inputType="textPassword"
-            android:layout_below="@id/userName"
-            android:gravity="center"
-            android:layout_centerHorizontal="true"/>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <EditText
+                android:id="@+id/userName"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:ems="10"
+                android:hint="@string/user_name"
+                android:gravity="center">
+            </EditText>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <EditText
+                android:id="@+id/password"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:ems="10"
+                android:hint="@string/password"
+                android:inputType="textPassword"
+                android:gravity="center"/>
+
+        </android.support.design.widget.TextInputLayout>
 
         <Button
             android:id="@+id/login"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:text="@string/login"
-            android:layout_below="@id/password"
-            android:gravity="center"
-            android:layout_centerHorizontal="true"/>
+            android:gravity="center"/>
 
-    </RelativeLayout>
+    </LinearLayout>
+
 </ScrollView>
