--- a/app/src/main/res/layout/drawer_item.xml
+++ b/app/src/main/res/layout/drawer_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="48dp" >
 
@@ -13,21 +14,18 @@
         android:id="@+id/ItemIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="{zmdi-android}"
         android:shadowColor="#22000000"
-        android:layout_marginStart="6dp"
+        android:layout_marginStart="8dp"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
         android:shadowDx="3"
         android:shadowDy="3"
         android:shadowRadius="1"
-        android:textSize="90dp"
-        android:textColor="#FF33B5E5" />
+        android:textSize="26sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="title"
         android:layout_centerVertical="true"
         android:layout_marginStart="16dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
