change font icon in customer

--- a/app/src/main/res/layout/item_customer.xml
+++ b/app/src/main/res/layout/item_customer.xml
@@ -63,7 +63,7 @@
                     android:id="@+id/phoneIcon"
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
-                    android:text="{zmdi-shopping-cart}"
+                    android:text="{zmdi-phone}"
                     android:shadowColor="#22000000"
                     android:shadowDx="3"
                     android:shadowDy="3"
@@ -97,7 +97,7 @@
                     android:id="@+id/addressIcon"
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
-                    android:text="{zmdi-shopping-cart}"
+                    android:text="{zmdi-store}"
                     android:shadowColor="#22000000"
                     android:shadowDx="3"
                     android:shadowDy="3"
